ugly fix for type spacing

--- a/app/assets/sass/core/components/_preview.scss
+++ b/app/assets/sass/core/components/_preview.scss
@@ -18,12 +18,14 @@
       }
     }
     h3.sub-section-heading {
-      margin-top: 0;
-      height: calc(#{$h4} * 2);
+      min-height: $h4 * 2.5;
       a {
         color: $black;
         text-decoration: none;
       }
+    }
+    p {
+      min-height: $font-size * 2.5;
     }
     h4 + p {
       margin-top: 0;
